--- a/air-pollution/air-pollution-1.html
+++ b/air-pollution/air-pollution-1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Air Pollution Model</title>
+    <title>Modelo de contaminación del aire</title>
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -21,10 +21,10 @@
       <div class="button-set">
         <div id="wind-top-labels" class="button-label-top">
           <span class="left"><i class="icon-long-arrow-left"></i></span>
-          <span class="center">None</span>
+          <span class="center">Ninguno</span>
           <span class="right"><i class="icon-long-arrow-right"></i></span>
         </div>
-        <div class="button-label-left">Wind:</div>
+        <div class="button-label-left">Viento:</div>
         <div id="wind-slider" class="horizontal-slider"></div>
         <div id="cars-top-labels" class="button-label-top">
           <span class="left"><i class="icon-truck"></i></span>
@@ -34,7 +34,7 @@
             <i class="icon-truck"></i>
           </span>
         </div>
-        <div class="button-label-left">Cars:</div>
+        <div class="button-label-left">Autos:</div>
         <div id="cars-slider" class="horizontal-slider"></div>
         <div id="factories-top-labels" class="button-label-top">
           <span class="left"><i class="icon-building"></i></span>
@@ -44,7 +44,7 @@
             <i class="icon-building"></i>
           </span>
         </div>
-        <div class="button-label-left">Power plants:</div>
+        <div class="button-label-left">Centrales energéticas:</div>
         <div id="factories-slider" class="horizontal-slider"></div>
       </div>
       <div id="filling" class="button-set">
@@ -54,7 +54,7 @@
     </div>
     <div id="model-viewport">
       <div id="model">
-        <canvas id="testCanvas" style="height:0;width:0;">Your browser does not support HTML5 Canvas.</canvas>
+        <canvas id="testCanvas" style="height:0;width:0;">Su navegador no soporta HTML5 Canvas.</canvas>
         <div id="layers"></div>
         <div id="mouse-catcher"></div>
       </div>
