--- a/air-pollution/air-pollution-1.html
+++ b/air-pollution/air-pollution-1.html
@@ -21,7 +21,7 @@
       <div class="button-set">
         <div id="wind-top-labels" class="button-label-top">
           <span class="left"><i class="icon-long-arrow-left"></i></span>
-          <span class="center">Ninguno</span>
+          <span class="center">No hay</span>
           <span class="right"><i class="icon-long-arrow-right"></i></span>
         </div>
         <div class="button-label-left">Viento:</div>
