--- a/air-pollution/lab-embeddable-with-air-temp-es.html
+++ b/air-pollution/lab-embeddable-with-air-temp-es.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Air Pollution Model</title>
+    <title>Modelo de Contaminacin del Aire</title>
     <!-- Style adjustments, so model works fine in fullscreen mode: -->
     <style>
       html {
