--- a/air-pollution/air-pollution-2.html
+++ b/air-pollution/air-pollution-2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Air Pollution Model</title>
+    <title>Modelo Calidad del Aire</title>
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -21,10 +21,10 @@
       <div class="button-set">
         <div id="wind-top-labels" class="button-label-top">
           <span class="left"><i class="icon-long-arrow-left"></i></span>
-          <span class="center">None</span>
+          <span class="center">No hay</span>
           <span class="right"><i class="icon-long-arrow-right"></i></span>
         </div>
-        <div class="button-label-left">Wind:</div>
+        <div class="button-label-left">Viento:</div>
         <div id="wind-slider" class="horizontal-slider"></div>
       </div>
       <div class="button-set">
@@ -36,7 +36,7 @@
             <i class="icon-plus"></i>
           </span>
         </div>
-        <div class="button-label-left">Sunlight:</div>
+        <div class="button-label-left">Luz solar:</div>
         <div id="sunlight-slider" class="horizontal-slider"></div>
         <div id="rain-top-labels" class="button-label-top">
           <span class="left"><i class="icon-minus"></i></span>
@@ -46,7 +46,7 @@
             <i class="icon-plus"></i>
           </span>
         </div>
-        <div class="button-label-left">Rain:</div>
+        <div class="button-label-left">Lluvia:</div>
         <div id="rain-slider" class="horizontal-slider"></div>
       </div>
       <div id="filling" class="button-set">
