--- a/air-pollution/air-pollution-3.html
+++ b/air-pollution/air-pollution-3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Air Pollution Model</title>
+    <title>Modelo Calidad del Aire</title>
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -21,10 +21,10 @@
       <div class="button-set">
         <div id="wind-top-labels" class="button-label-top">
           <span class="left"><i class="icon-long-arrow-left"></i></span>
-          <span class="center">None</span>
+          <span class="center">No hay</span>
           <span class="right"><i class="icon-long-arrow-right"></i></span>
         </div>
-        <div class="button-label-left">Wind:</div>
+        <div class="button-label-left">Viento:</div>
         <div id="wind-slider" class="horizontal-slider"></div>
         <div id="cars-top-labels" class="button-label-top">
           <span class="left"><i class="icon-truck"></i></span>
@@ -34,7 +34,7 @@
             <i class="icon-truck"></i>
           </span>
         </div>
-        <div class="button-label-left">Cars:</div>
+        <div class="button-label-left">Vehículos:</div>
         <div id="cars-slider" class="horizontal-slider"></div>
         <div id="factories-top-labels" class="button-label-top">
           <span class="left"><i class="icon-building"></i></span>
@@ -44,17 +44,17 @@
             <i class="icon-building"></i>
           </span>
         </div>
-        <div class="button-label-left">Power plants:</div>
+        <div class="button-label-left">Centrales de energía:</div>
         <div id="factories-slider" class="horizontal-slider"></div>
       </div>
       <div class="button-set top-labels">
-        <div class="button-title-top">Percentage of cars with pollution control devices:</div>
+        <div class="button-title-top">Porcentaje de autos con dispositivo de control de emisiones:</div>
         <div id="cars-pollution-top-labels" class="button-label-top">
           <span class="left">0%</i></span>
           <span class="right">100%</span>
         </div>
         <div id="cars-pollution-control-slider" class="horizontal-slider"></div>
-        <div class="button-title-top">Percentage of power plants with pollution control devices:</div>
+        <div class="button-title-top">Porcentaje de centrales de energía con dispositivo de control de emisiones:</div>
         <div id="factories-pollution-top-labels" class="button-label-top">
           <span class="left">0%</i></span>
           <span class="right">100%</span>
