--- a/air-pollution/index.html
+++ b/air-pollution/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Air Pollution Model</title>
+    <title>Modelo Calidad del Aire</title>
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="bower_assets/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -21,10 +21,10 @@
       <div class="button-set">
         <div id="wind-top-labels" class="button-label-top">
           <span class="left"><i class="icon-long-arrow-left"></i></span>
-          <span class="center">None</span>
+          <span class="center">No hay</span>
           <span class="right"><i class="icon-long-arrow-right"></i></span>
         </div>
-        <div class="button-label-left">Wind:</div>
+        <div class="button-label-left">Viento:</div>
         <div id="wind-slider" class="horizontal-slider"></div>
         <div id="cars-top-labels" class="button-label-top">
           <span class="left"><i class="icon-truck"></i></span>
@@ -34,7 +34,7 @@
             <i class="icon-truck"></i>
           </span>
         </div>
-        <div class="button-label-left">Cars:</div>
+        <div class="button-label-left">Vehículos:</div>
         <div id="cars-slider" class="horizontal-slider"></div>
         <div id="factories-top-labels" class="button-label-top">
           <span class="left"><i class="icon-building"></i></span>
@@ -44,13 +44,13 @@
             <i class="icon-building"></i>
           </span>
         </div>
-        <div class="button-label-left">Power plants:</div>
+        <div class="button-label-left">Centrales de energía:</div>
         <div id="factories-slider" class="horizontal-slider"></div>
         <div id="temperature-top-labels" class="button-label-top">
-          <span class="left">Cold</span>
-          <span class="right">Hot</span>
+          <span class="left">Frío</span>
+          <span class="right">Calor</span>
         </div>
-        <div class="button-label-left">Temperature:</div>
+        <div class="button-label-left">Temperatura:</div>
         <div id="temperature-slider" class="horizontal-slider"></div>
       </div>
       <div class="button-set wide-labels">
@@ -62,7 +62,7 @@
             <i class="icon-plus"></i>
           </span>
         </div>
-        <div class="button-label-left">Sunlight:</div>
+        <div class="button-label-left">Luz solar:</div>
         <div id="sunlight-slider" class="horizontal-slider"></div>
         <div id="rain-top-labels" class="button-label-top">
           <span class="left"><i class="icon-minus"></i></span>
@@ -72,7 +72,7 @@
             <i class="icon-plus"></i>
           </span>
         </div>
-        <div class="button-label-left">Rain:</div>
+        <div class="button-label-left">Lluvia:</div>
         <div id="rain-slider" class="horizontal-slider"></div>
         <div id="cars-pollution-top-labels" class="button-label-top">
           <span class="left"><i class="icon-ban-circle"></i></span>
@@ -82,14 +82,14 @@
             <i class="icon-plus"></i>
           </span>
         </div>
-        <div class="button-label-left">Car pollution:</div>
+        <div class="button-label-left">Contaminación por autos:</div>
         <div id="cars-pollution-slider" class="horizontal-slider"></div>
         <div id="cars-electric-top-labels" class="button-label-top">
           <span class="left"><i class="icon-ban-circle"></i></span>
           <span class="center">50%</span>
           <span class="right">100%</span>
         </div>
-        <div class="button-label-left">Electric cars:</div>
+        <div class="button-label-left">Autos eléctricos:</div>
         <div id="cars-electric-slider" class="horizontal-slider"></div>
         <div id="factories-pollution-top-labels" class="button-label-top">
           <span class="left"><i class="icon-ban-circle"></i></span>
@@ -99,7 +99,7 @@
             <i class="icon-plus"></i>
           </span>
         </div>
-        <div class="button-label-left">Power plant pollution:</div>
+        <div class="button-label-left">Contaminación centrales de energía:</div>
         <div id="factories-pollution-slider" class="horizontal-slider"></div>
       </div>
       <div id="filling" class="button-set">
