--- a/air-pollution-aerial/index.html
+++ b/air-pollution-aerial/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>AgentScript Model</title>
+    <title>Modelo AgentScript</title>
     <script src="../lib/agentscript/agentscript.js"></script>
     <script src="../lib/agentscript/coffee-script.js"></script>
     <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
@@ -52,41 +52,41 @@
         </div>
       </div>
       <div id="air-quality">
-        <h2>Air Quality</h2>
+        <h2>Calidad del Aire</h2>
         <div id="air-quality-scale">
           <div id="scale"></div>
-          <span id="poor">Poor</span>
-          <span id="fair">Fair</span>
-          <span id="good">Good</span>
+          <span id="poor">Pobre</span>
+          <span id="fair">Mediana</span>
+          <span id="good">Buena</span>
         </div>
         <div id="cities">
           <div id="city-a" class="city">
-            <h3>City A</h3>
+            <h3>Ciudad A</h3>
             <div class="quality-measure"></div>
           </div>
           <div id="city-b" class="city">
-            <h3>City B</h3>
+            <h3>Ciudad B</h3>
             <div class="quality-measure"></div>
           </div>
           <div id="city-c" class="city">
-            <h3>City C</h3>
+            <h3>Ciudad C</h3>
             <div class="quality-measure"></div>
           </div>
         </div>
       </div>
       <div id="joystick-control">
-        <h2>Wind</h2>
+        <h2>Viento</h2>
         <div id="base">
             <div id="joystick"></div>
         </div>
         <span id="joystick-n">N</span>
         <span id="joystick-e">E</span>
         <span id="joystick-s">S</span>
-        <span id="joystick-w">W</span>
+        <span id="joystick-w">O</span>
         <div id="windspeed"><span id="joystick-speed">0</span> MPH <span id="joystick-direction"></span></div>
       </div>
       <div id="instructions">
-        <span>Click on the model to add up to four power plants.</span>
+        <span>Clic en el modelo para agregar hasta cuatro centrales de energía.</span>
       </div>
     </div>
     <script>
