--- a/air-pollution-aerial/index.html
+++ b/air-pollution-aerial/index.html
@@ -61,15 +61,15 @@
         </div>
         <div id="cities">
           <div id="city-a" class="city">
-            <h3>Ciudad A</h3>
+            <h4>Ciudad A</h4>
             <div class="quality-measure"></div>
           </div>
           <div id="city-b" class="city">
-            <h3>Ciudad B</h3>
+            <h4>Ciudad B</h4>
             <div class="quality-measure"></div>
           </div>
           <div id="city-c" class="city">
-            <h3>Ciudad C</h3>
+            <h4>Ciudad C</h4>
             <div class="quality-measure"></div>
           </div>
         </div>
@@ -83,7 +83,7 @@
         <span id="joystick-e">E</span>
         <span id="joystick-s">S</span>
         <span id="joystick-w">O</span>
-        <div id="windspeed"><span id="joystick-speed">0</span> MPH <span id="joystick-direction"></span></div>
+        <div id="windspeed"><span id="joystick-speed">0</span> Km/h <span id="joystick-direction"></span></div>
       </div>
       <div id="instructions">
         <span>Clic en el modelo para agregar hasta cuatro centrales de energía.</span>
