--- a/air-pollution-aerial/index.html
+++ b/air-pollution-aerial/index.html
@@ -211,7 +211,7 @@
         if (angle > Math.PI/8 && angle < 7*Math.PI/8) {
           direction[1] = (distLeft > 0) ? "W" : "E"
         }
-        direction = "from the " + direction.join("");
+        direction = "desde el " + direction.join("");
         return direction;
       }
 
