--- a/air-pollution-aerial/index.html
+++ b/air-pollution-aerial/index.html
@@ -86,7 +86,7 @@
         <div id="windspeed"><span id="joystick-speed">0</span> Km/h <span id="joystick-direction"></span></div>
       </div>
       <div id="instructions">
-        <span>Clic en el modelo para agregar hasta cuatro centrales de energía.</span>
+        <span>Clic en el terreno para agregar hasta cuatro centrales de energía.</span>
       </div>
     </div>
     <script>
