--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>AgentScript Models</title>
+    <title>Modelos AgentScript</title>
     <style type="text/css">
       body {
         font-family: 'Lato', georgia, times, "times new roman", serif;
@@ -69,155 +69,155 @@
   </head>
   <body>
     <div id="header">
-      <h1>AgentScript Models</h1>
+      <h1>Modelos AgentScript</h1>
     </div>
 
     <div id="credits">
-      <p>AgentScript repository: <a href="https://github.com/backspaces/agentscript">github.com/backspaces/agentscript</a></p>
-      <p>Concord Consortium's AgentScript model repository: <a href="https://github.com/concord-consortium/agentscript-models">github.com/concord-consortium/agentscript-models</a></p>
+      <p>Repositorio AgentScript: <a href="https://github.com/backspaces/agentscript">github.com/backspaces/agentscript</a></p>
+      <p>Repositorio de modelos AgentScript de Concord Consortium: <a href="https://github.com/concord-consortium/agentscript-models">github.com/concord-consortium/agentscript-models</a></p>
     </div>
 
     <div class="model-collection">
-      <h2>HAS Models</h2>
+      <h2>Modelos Alta Aventura Científica</h2>
       <div>
         <ul>
-          <li><a href="air-pollution/air-pollution-1.html" target="_blank">Air Pollution Variant 1</a></li>
-          <li><a href="air-pollution/air-pollution-1a.html" target="_blank">Air Pollution Variant 1a</a></li>
-          <li><a href="air-pollution/air-pollution-2.html" target="_blank">Air Pollution Variant 2</a></li>
-          <li><a href="air-pollution/air-pollution-3.html" target="_blank">Air Pollution Variant 3</a></li>
-          <li><a href="air-pollution/air-pollution-4.html" target="_blank">Air Pollution Variant 4</a></li>
-          <li><a href="air-pollution/index.html" target="_blank">Air Pollution (master)</a></li>
-          <li><a href="air-pollution-aerial/index.html" target="_blank">Air Pollution Aerial View</a></li>
+          <li><a href="air-pollution/air-pollution-1.html" target="_blank">Contaminación del Aire Variante 1</a></li>
+          <li><a href="air-pollution/air-pollution-1a.html" target="_blank">Contaminación del Aire Variante 1a</a></li>
+          <li><a href="air-pollution/air-pollution-2.html" target="_blank">Contaminación del Aire Variante 2</a></li>
+          <li><a href="air-pollution/air-pollution-3.html" target="_blank">Contaminación del Aire Variante 3</a></li>
+          <li><a href="air-pollution/air-pollution-4.html" target="_blank">Contaminación del Aire Variante 4</a></li>
+          <li><a href="air-pollution/index.html" target="_blank">Contaminación del Aire (master)</a></li>
+          <li><a href="air-pollution-aerial/index.html" target="_blank">Contaminación del Aire Variante Vista Aérea</a></li>
         </ul>
       </div>
       <div>
         <ul>
-          <li><a href="fracking/fracking-1.html" target="_blank">Fracking Variant 1</a></li>
-          <li><a href="fracking/fracking-2.html" target="_blank">Fracking Variant 2</a></li>
-          <li><a href="fracking/fracking-3.html" target="_blank">Fracking Variant 3</a></li>
+          <li><a href="fracking/fracking-1.html" target="_blank">Fracking Variante 1</a></li>
+          <li><a href="fracking/fracking-2.html" target="_blank">Fracking Variante 2</a></li>
+          <li><a href="fracking/fracking-3.html" target="_blank">Fracking Variante 3</a></li>
         </ul>
       </div>
       <div>
         <ul>
-          <li><a href="global-climate/global-climate-1.html" target="_blank">Global Climate Variant 1</a></li>
-          <li><a href="global-climate/global-climate-2.html" target="_blank">Global Climate Variant 2</a></li>
-          <li><a href="global-climate/global-climate-3.html" target="_blank">Global Climate Variant 3</a></li>
-          <li><a href="global-climate/global-climate-4.html" target="_blank">Global Climate Variant 4</a></li>
-          <li><a href="global-climate/global-climate-5.html" target="_blank">Global Climate Variant 5</a></li>
-          <li><a href="global-climate/global-climate-6.html" target="_blank">Global Climate Variant 6</a></li>
-          <li><a href="global-climate/global-climate-7.html" target="_blank">Global Climate Variant 7</a></li>
-          <li><a href="global-climate/global-climate-8.html" target="_blank">Global Climate Variant 8</a></li>
-          <li><a href="global-climate/global-climate.html" target="_blank">Global Climate model (master)</a></li>
-          <li><a href="global-climate/global-climate-ocean.html" target="_blank">Global Climate model with Ocean (master)</a></li>
-          <li><a href="global-climate/global-climate-ocean-temperature.html" target="_blank">Global Climate with Ocean and Temperature Control</a></li>
+          <li><a href="global-climate/global-climate-1.html" target="_blank">Clima Global Variante 1</a></li>
+          <li><a href="global-climate/global-climate-2.html" target="_blank">Clima Global Variante 2</a></li>
+          <li><a href="global-climate/global-climate-3.html" target="_blank">Clima Global Variante 3</a></li>
+          <li><a href="global-climate/global-climate-4.html" target="_blank">Clima Global Variante 4</a></li>
+          <li><a href="global-climate/global-climate-5.html" target="_blank">Clima Global Variante 5</a></li>
+          <li><a href="global-climate/global-climate-6.html" target="_blank">Clima Global Variante 6</a></li>
+          <li><a href="global-climate/global-climate-7.html" target="_blank">Clima Global Variante 7</a></li>
+          <li><a href="global-climate/global-climate-8.html" target="_blank">Clima Global Variante 8</a></li>
+          <li><a href="global-climate/global-climate.html" target="_blank">Modelo de Clima Global (master)</a></li>
+          <li><a href="global-climate/global-climate-ocean.html" target="_blank">Modelo de Clima Global con Océano (master)</a></li>
+          <li><a href="global-climate/global-climate-ocean-temperature.html" target="_blank">CLima Global con Océano y Control de Temperatura</a></li>
         </ul>
       </div>
       <div>
         <ul>
           <li>
-            <a href="water/water-1.html" target="_blank">Water Variant 1</a>
+            <a href="water/water-1.html" target="_blank">Agua Variante 1</a>
             [<a href="water/water-1-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-2.html" target="_blank">Water Variant 2</a>
+            <a href="water/water-2.html" target="_blank">Agua Variante 2</a>
             [<a href="water/water-2-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-3.html" target="_blank">Water Variant 3</a>
+            <a href="water/water-3.html" target="_blank">Agua Variante 3</a>
             [<a href="water/water-3-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-4.html" target="_blank">Water Variant 4</a>
+            <a href="water/water-4.html" target="_blank">Agua Variante 4</a>
             [<a href="water/water-4-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-5.html" target="_blank">Water Variant 5</a>
+            <a href="water/water-5.html" target="_blank">Agua Variante 5</a>
             [<a href="water/water-5-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-6.html" target="_blank">Water Variant 6</a>
+            <a href="water/water-6.html" target="_blank">Agua Variante 6</a>
             [<a href="water/water-6-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-7.html" target="_blank">Water Variant 7</a>
+            <a href="water/water-7.html" target="_blank">Agua Variante 7</a>
             [<a href="water/water-7-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/water-8.html" target="_blank">Water Variant 8</a>
+            <a href="water/water-8.html" target="_blank">Agua Variante 8</a>
             [<a href="water/water-8-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/index.html" target="_blank">Water (master)</a>
+            <a href="water/index.html" target="_blank">Agua (master)</a>
             [<a href="water/index-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/static-layers.html" target="_blank">Water (with pre-set static layers)</a>
+            <a href="water/static-layers.html" target="_blank">Agua (con capas pre-estáticas)</a>
             [<a href="water/static-layers-hi-res.html" target="_blank">hi-res</a>]
           </li>
           <li>
-            <a href="water/import-export.html" target="_blank">Water (with importing and exporting of saved state)</a>
+            <a href="water/import-export.html" target="_blank">Agua (sin importar o exportar el estado grabado)</a>
             [<a href="water/import-export-hi-res.html" target="_blank">hi-res</a>]
           </li>
         </ul>
       </div>
       <div>
         <ul>
-          <li><a href="land-management/land-management-1.html" target="_blank">Land Management Variant 1</a></li>
-          <li><a href="land-management/land-management-2.html" target="_blank">Land Management Variant 2</a></li>
-          <li><a href="land-management/land-management-3.html" target="_blank">Land Management Variant 3</a></li>
-          <li><a href="land-management/land-management-4.html" target="_blank">Land Management Variant 4</a></li>
-          <li><a href="land-management/land-management-5.html" target="_blank">Land Management Variant 5</a></li>
-          <li><a href="land-management/index.html" target="_blank">Land Management (master)</a></li>
+          <li><a href="land-management/land-management-1.html" target="_blank">Gestión de la tierra Variante 1</a></li>
+          <li><a href="land-management/land-management-2.html" target="_blank">Gestión de la tierra Variante 2</a></li>
+          <li><a href="land-management/land-management-3.html" target="_blank">Gestión de la tierra Variante 3</a></li>
+          <li><a href="land-management/land-management-4.html" target="_blank">Gestión de la tierra Variante 4</a></li>
+          <li><a href="land-management/land-management-5.html" target="_blank">Gestión de la tierra Variante 5</a></li>
+          <li><a href="land-management/index.html" target="_blank">Gestión de la tierra (master)</a></li>
         </ul>
       </div>
     </div>
 
     <div class="model-collection">
-      <h2>Other CC Models</h2>
+      <h2>Otros modelos de CC</h2>
       <div>
         <ul>
-          <li><a href="solar-panel/solar-panel-2.0.html" target="_blank">Solar Panel 2.0</a></li>
+          <li><a href="solar-panel/solar-panel-2.0.html" target="_blank">Panel Solar 2.0</a></li>
         </ul>
       </div>
     </div>
 
     <div class="model-collection">
-      <h2>AgentScript Sample Models</h2>
+      <h2>Modelos de ejemplo de AgentScript</h2>
       <div>
         <ul>
-          <li><a href="lib/agentscript/models/ants.html" target="_blank">Ants</a></li>
-          <li><a href="lib/agentscript/models/buttons.html" target="_blank">Buttons</a></li>
-          <li><a href="lib/agentscript/models/diffusion.html" target="_blank">Diffusion</a></li>
-          <li><a href="lib/agentscript/models/fire.html" target="_blank">Fire</a></li>
-          <li><a href="lib/agentscript/models/flock.html" target="_blank">Flocking</a></li>
-          <li><a href="lib/agentscript/models/gridpath.html" target="_blank">Grid Path</a></li>
+          <li><a href="lib/agentscript/models/ants.html" target="_blank">Hormigas</a></li>
+          <li><a href="lib/agentscript/models/buttons.html" target="_blank">Botones</a></li>
+          <li><a href="lib/agentscript/models/diffusion.html" target="_blank">Difusión</a></li>
+          <li><a href="lib/agentscript/models/fire.html" target="_blank">Fuego</a></li>
+          <li><a href="lib/agentscript/models/flock.html" target="_blank">Bandada</a></li>
+          <li><a href="lib/agentscript/models/gridpath.html" target="_blank">Grilla</a></li>
           <li><a href="lib/agentscript/models/linktravel.html" target="_blank">Link Travel</a></li>
           <li><a href="lib/agentscript/models/nbody.html" target="_blank">N-Body</a></li>
-          <li><a href="lib/agentscript/models/prefattach.html" target="_blank">Ants</a></li>
+          <li><a href="lib/agentscript/models/prefattach.html" target="_blank">Hormigas</a></li>
           <li><a href="lib/agentscript/models/tspga.html" target="_blank">TSPGA</a></li>
         </ul>
       </div>
     </div>
 
     <div class="model-collection">
-      <h2>AgentScript Test Models</h2>
+      <h2>Modelos AgentScript de prueba</h2>
       <div>
         <ul>
-          <li><a href="lib/agentscript/testmodels/testcone.html" target="_blank">Test Cone</a></li>
-          <li><a href="lib/agentscript/testmodels/testshapes.html" target="_blank">Test Shapes</a></li>
+          <li><a href="lib/agentscript/testmodels/testcone.html" target="_blank">Probar Cono</a></li>
+          <li><a href="lib/agentscript/testmodels/testshapes.html" target="_blank">Probar Figuras</a></li>
         </ul>
       </div>
     </div>
 
     <div id="documentation">
-      <h2>Documentation</h2>
+      <h2>Documentación</h2>
         <ul>
           <li><a href="lib/agentscript/docs/agentset.html" target="_blank">AgentSet</a></li>
           <li><a href="lib/agentscript/docs/agentsets.html" target="_blank">AgentSets</a></li>
-          <li><a href="lib/agentscript/docs/model.html" target="_blank">Model</a></li>
-          <li><a href="lib/agentscript/docs/shapes.html" target="_blank">Shapes</a></li>
-          <li><a href="lib/agentscript/docs/template" target="_blank">Template</a></li>
-          <li><a href="lib/agentscript/docs/util.html" target="_blank">Utilities</a></li>
+          <li><a href="lib/agentscript/docs/model.html" target="_blank">Modelo</a></li>
+          <li><a href="lib/agentscript/docs/shapes.html" target="_blank">Figuras</a></li>
+          <li><a href="lib/agentscript/docs/template" target="_blank">Plantilla</a></li>
+          <li><a href="lib/agentscript/docs/util.html" target="_blank">Utilidades</a></li>
         </ul>
     </div>
   </body>
