--- a/global-climate/global-climate-1.html
+++ b/global-climate/global-climate-1.html
@@ -54,20 +54,20 @@
     </div>
     <div id="content">
       <div id="model">
-        <canvas id="canvas" >Your browser does not support HTML5 Canvas.</canvas>
+        <canvas id="canvas" >Su nevagador no soporta HTML5 Canvas.</canvas>
         <div id="layers"></div>
       </div>
       <div id="model-bottom">
         <ul>
           <li>
-            <button id="erupt-button">Erupt!</button>
-            <button id="subtract-co2-button">Remove CO<sub>2</sub></button>
+           <button id="erupt-button">Erupción</button>
+            <button id="subtract-co2-button">Quitar CO<sub>2</sub></button>
           </li>
         </ul>
         <ul>
           <li>
-            <button id="follow-sunray-button" class="follow-agent">Follow energy packet</button>
-            <button id="follow-co2-button" class="follow-agent">Follow CO<sub>2</sub></button>
+            <button id="follow-sunray-button" class="follow-agent">Seguir paquete de energía</button>
+            <button id="follow-co2-button" class="follow-agent">Seguir CO<sub>2</sub></button>
           </li>
         </ul>
       </div>
@@ -81,7 +81,7 @@
             <i class="icon-pause"></i>
           </button>
         </div>
-        <span class="slider-units" title="Change the speed of the model"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
+        <span class="slider-units" title="Cambiar la velocidad del modelo"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
       </div>
       <div id="show-agent-controls">
         Show:
@@ -93,16 +93,16 @@
         <div class="checkbox">
           <input type="checkbox" value="None" id="showRays" name="check" checked/>
           <label for="showRays"></label>
-          <span>Rays</span>
+          <span>Rayos</span>
         </div>
         <div class="checkbox">
           <input type="checkbox" value="None" id="showHeat" name="check" checked/>
           <label for="showHeat"></label>
-          <span>Heat</span>
+          <span>Calor</span>
         </div>
       </div>
       <div id="year-box">
-        Year: <span id="year"></span>
+        Año: <span id="year"></span>
       </div>
     </div>
     <img id="cc-logo" class="one-col" src="../assets/img/cc-logo.png" alt="The Concord Consortium" />
