--- a/global-climate/global-climate-1.html
+++ b/global-climate/global-climate-1.html
@@ -29,9 +29,9 @@
         climateModel = new ClimateModel("layers", 12, -24, 24, -15, 15, true);
 
         climateModel.restrictKeyLabelsTo = [
-          "solar radiation",
-          "carbon dioxide",
-          "heat"
+          "radiación solar",
+          "dióxido de carbono",
+          "calor"
         ];
 
         setup = function() {
@@ -54,7 +54,7 @@
     </div>
     <div id="content">
       <div id="model">
-        <canvas id="canvas" >Su nevagador no soporta HTML5 Canvas.</canvas>
+        <canvas id="canvas" >Su navegador no soporta HTML5 Canvas.</canvas>
         <div id="layers"></div>
       </div>
       <div id="model-bottom">
@@ -84,7 +84,7 @@
         <span class="slider-units" title="Cambiar la velocidad del modelo"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
       </div>
       <div id="show-agent-controls">
-        Show:
+        Mostrar:
         <div class="checkbox">
           <input type="checkbox" value="None" id="showGases" name="check" checked/>
           <label for="showGases"></label>
