--- a/global-climate/global-climate-1-ORI.html
+++ b/global-climate/global-climate-1-ORI.html
@@ -29,9 +29,9 @@
         climateModel = new ClimateModel("layers", 12, -24, 24, -15, 15, true);
 
         climateModel.restrictKeyLabelsTo = [
-          "solar radiation",
-          "carbon dioxide",
-          "heat"
+          "radiación solar",
+          "dióxido de carbono",
+          "calor"
         ];
 
         setup = function() {
