--- a/global-climate/global-climate-1-ORI.html
+++ b/global-climate/global-climate-1-ORI.html
@@ -29,8 +29,8 @@
         climateModel = new ClimateModel("layers", 12, -24, 24, -15, 15, true);
 
         climateModel.restrictKeyLabelsTo = [
-          "radiación solar",
-          "dióxido de carbono",
+          "solar radiation",
+          "carbon dioxide",
           "calor"
         ];
 
