--- a/global-climate/global-climate-1-ORI.html
+++ b/global-climate/global-climate-1-ORI.html
@@ -31,7 +31,7 @@
         climateModel.restrictKeyLabelsTo = [
           "solar radiation",
           "carbon dioxide",
-          "calor"
+          "heat"
         ];
 
         setup = function() {
