--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="model-collection">
-      <h2>Modelos Alta Aventura Científica</h2>
+      <h2><a href="http://has.concord.org">Modelos Alta Aventura Científica</a></h2>
       <div>
         <ul>
           <li><a href="air-pollution/air-pollution-1.html" target="_blank">Contaminación del Aire Variante 1</a></li>
