--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li><a href="global-climate/global-climate-8.html" target="_blank">Clima Global Variante 8</a></li>
           <li><a href="global-climate/global-climate.html" target="_blank">Modelo de Clima Global (master)</a></li>
           <li><a href="global-climate/global-climate-ocean.html" target="_blank">Modelo de Clima Global con Océano (master)</a></li>
-          <li><a href="global-climate/global-climate-ocean-temperature.html" target="_blank">CLima Global con Océano y Control de Temperatura</a></li>
+          <li><a href="global-climate/global-climate-ocean-temperature.html" target="_blank">Clima Global con Océano y Control de Temperatura</a></li>
         </ul>
       </div>
       <div>
@@ -191,7 +191,7 @@
           <li><a href="lib/agentscript/models/fire.html" target="_blank">Fuego</a></li>
           <li><a href="lib/agentscript/models/flock.html" target="_blank">Bandada</a></li>
           <li><a href="lib/agentscript/models/gridpath.html" target="_blank">Grilla</a></li>
-          <li><a href="lib/agentscript/models/linktravel.html" target="_blank">Link Travel</a></li>
+          <li><a href="lib/agentscript/models/linktravel.html" target="_blank">Enlace viajero</a></li>
           <li><a href="lib/agentscript/models/nbody.html" target="_blank">N-Body</a></li>
           <li><a href="lib/agentscript/models/prefattach.html" target="_blank">Hormigas</a></li>
           <li><a href="lib/agentscript/models/tspga.html" target="_blank">TSPGA</a></li>
