--- a/fracking/fracking-1.html
+++ b/fracking/fracking-1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Fracking Model</title>
+    <title>Modelo de Fracking</title>
     <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -35,7 +35,7 @@
       </div>
       <div class="button-set">
         <div id="drilling">
-          <div id="drilling-header">Drill</div>
+          <div id="drilling-header">Perforar</div>
           <div id="drilling-buttons">
             <input type="checkbox" id="drill-left" /><label for="drill-left"><i class="icon-long-arrow-left"></i></label>
             <input type="checkbox" id="drill-down" /><label for="drill-down"><i class="icon-long-arrow-down"></i></label>
@@ -44,18 +44,18 @@
         </div>
       </div>
       <div class="button-set">
-        <button id="explosion">Set off explosions</button>
+        <button id="explosion">Desactivar explosiones</button>
       </div>
       <div id="filling" class="button-set">
         <div>
-          <button id="fill-water">Fill with water</button>
+          <button id="fill-water">Llenar con agua</button>
         </div>
         <div>
-          <button id="fill-propane">Fill with propane</button>
+          <button id="fill-propane">Llenar con propano</button>
         </div>
       </div>
       <div class="button-set">
-        <button id="remove-fluid">Pump out fracking fluid</button>
+        <button id="remove-fluid">Bombear hacia afuera el fluido de fracking</button>
       </div>
     </div>
     <div id="model-viewport">
