--- a/fracking/fracking-2.html
+++ b/fracking/fracking-2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Fracking Model</title>
+    <title>Modelo de Fracking</title>
     <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -44,18 +44,18 @@
         </div>
       </div>
       <div class="button-set">
-        <button id="explosion">Set off explosions</button>
+        <button id="explosion">Descativar explosiones</button>
       </div>
       <div id="filling" class="button-set">
         <div>
-          <button id="fill-water">Fill with water</button>
+          <button id="fill-water">Llenar con agua</button>
         </div>
         <div>
-          <button id="fill-propane">Fill with propane</button>
+          <button id="fill-propane">Llenar con propano</button>
         </div>
       </div>
       <div class="button-set">
-        <button id="remove-fluid">Pump out fracking fluid</button>
+        <button id="remove-fluid">Bombear hacia afuera el fluido del fracking</button>
       </div>
     </div>
     <div id="model-viewport">
