--- a/fracking/fracking-2.html
+++ b/fracking/fracking-2.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="button-set">
-        <button id="remove-fluid">Bombear hacia afuera el fluido del fracking</button>
+        <button id="remove-fluid">Liberar el fluido del fracking</button>
       </div>
     </div>
     <div id="model-viewport">
