--- a/fracking/fracking-2.html
+++ b/fracking/fracking-2.html
@@ -35,7 +35,7 @@
       </div>
       <div class="button-set">
         <div id="drilling">
-          <div id="drilling-header">Drill</div>
+          <div id="drilling-header">Perforar</div>
           <div id="drilling-buttons">
             <input type="checkbox" id="drill-left" /><label for="drill-left"><i class="icon-long-arrow-left"></i></label>
             <input type="checkbox" id="drill-down" /><label for="drill-down"><i class="icon-long-arrow-down"></i></label>
