--- a/fracking/fracking-1.html
+++ b/fracking/fracking-1.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="button-set">
-        <button id="explosion">Desactivar explosiones</button>
+        <button id="explosion">Desencadenar explosiones</button>
       </div>
       <div id="filling" class="button-set">
         <div>
