--- a/fracking/fracking-1.html
+++ b/fracking/fracking-1.html
@@ -100,7 +100,7 @@
       });
       $(document).one('fracking-controls-loaded', function() {
           $('body').append('<div id="instructions-overlay"></div>');
-          $('body').append('<a id="instructions-toggle" href="#">hide help</a>');
+          $('body').append('<a id="instructions-toggle" href="#">ocultar ayuda</a>');
           $('#instructions-overlay, #instructions-toggle').click(function() {
             toggleInstructionsOverlay();
             return false;
