--- a/global-climate/global-climate-2.html
+++ b/global-climate/global-climate-2.html
@@ -29,9 +29,9 @@
         climateModel = new ClimateModel("layers", 12, -24, 24, -15, 15, true);
 
         climateModel.restrictKeyLabelsTo = [
-          "solar radiation",
-          "carbon dioxide",
-          "heat"
+          "radiación solar",
+          "dióxido de carbono",
+          "calor"
         ];
         climateModel.aboutText = "<p>Estos gráficos muestran el cambio relativo en la temperatura (gráfico superior) y la concentación de gases de efecto invernadero en la atmósfera (gráfico inferior). <p>Juntos, estos gráficos muestran la relación entre la concentración de gaseas de efecto invernadero (GEI) y la temperatura del planeta. <p>Este modelo es una representación simplificada del sistema climático, y como tal, no muestra la concentración actual de gases de efecto invernadero en la atmósfera."
 
@@ -83,7 +83,7 @@
         <span class="slider-units" title="Cambiar la velocidad del modelo"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
       </div>
       <div id="show-agent-controls">
-        Show:
+        Mostrar:
         <div class="checkbox">
           <input type="checkbox" value="None" id="showGases" name="check" checked/>
           <label for="showGases"></label>
