--- a/global-climate/lab-embeddable.html
+++ b/global-climate/lab-embeddable.html
@@ -78,11 +78,11 @@
     </div>
     <div id="content">
       <div id="model">
-        <canvas id="canvas" >Your browser does not support HTML5 Canvas.</canvas>
+        <canvas id="canvas" >Su navegador no soporta HTML5 Canvas.</canvas>
         <div id="layers"></div>
       </div>
       <div id="year-box">
-        Year: <span id="year"></span>
+        Año: <span id="year"></span>
       </div>
     </div>
   </body>
