--- a/global-climate/global-climate-5.html
+++ b/global-climate/global-climate-5.html
@@ -68,7 +68,7 @@
       <div id="model-bottom">
         <ul style="padding: 0.5em;padding-top:1em;">
           <li>
-            <div style="margin-bottom: 1em;">Emisiones humanas (% of 2010 levels):</div>
+            <div style="margin-bottom: 1em;">Emisiones humanas (% de niveles de 2010):</div>
             <span class="slider-units">0 <div id="human-emissions-slider"></div> 200%</span>
           </li>
         </ul>
