--- a/global-climate/global-climate-9.html
+++ b/global-climate/global-climate-9.html
@@ -65,16 +65,16 @@
     </div>
     <div id="content">
       <div id="model">
-        <canvas id="canvas" >Your browser does not support HTML5 Canvas.</canvas>
+        <canvas id="canvas" >Su navegador no soporta HTML5 Canvas.</canvas>
         <div id="layers"></div>
       </div>
       <div id="controls">
-        <p class="show-about-text"><a href="#">About these graphs</a></p>
+        <p class="show-about-text"><a href="#">Acerca de estos gráficos</a></p>
         <div id='temperature-graph' class="graph" style="height: 187px;"></div>
         <div id='co2-graph' class="graph" style="height: 187px;"></div>
         <ul>
           <li>
-            <label for="ocean-albedo-slider">Ocean Albedo:</label>
+            <label for="ocean-albedo-slider">Albedo oceánico:</label>
             <span class="slider-units">0 <div id="ocean-albedo-slider"></div> 1</span> <span class='slider-units' id='ocean-albedo-value'></span>
           </li>
         </ul>
@@ -82,7 +82,7 @@
       <div id="model-bottom">
         <ul style="padding: 0.5em;padding-top:1em;">
           <li>
-            <div style="margin-bottom: 1em;">Human emissions (% of 2010 levels):</div>
+            <div style="margin-bottom: 1em;">Emisiones humanas (% de niveles de 2010):</div>
             <span class="slider-units">0 <div id="human-emissions-slider"></div> 200%</span>
           </li>
         </ul>
@@ -97,10 +97,10 @@
             <i class="icon-pause"></i>
           </button>
         </div>
-        <span class="slider-units" title="Change the speed of the model"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
+        <span class="slider-units" title="Cambiar la velocidad de ejecución del modelo"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
       </div>
       <div id="show-agent-controls">
-        Show:
+        Mostrar:
         <div class="checkbox">
           <input type="checkbox" value="None" id="showGases" name="check" checked/>
           <label for="showGases"></label>
@@ -109,21 +109,21 @@
         <div class="checkbox">
           <input type="checkbox" value="None" id="showRays" name="check" checked/>
           <label for="showRays"></label>
-          <span>Rays</span>
+          <span>Rayos</span>
         </div>
         <div class="checkbox">
           <input type="checkbox" value="None" id="showHeat" name="check" checked/>
           <label for="showHeat"></label>
-          <span>Heat</span>
+          <span>Calor</span>
         </div>
         <div class="checkbox">
           <input type="checkbox" value="None" id="useIREmit" name="check" />
           <label for="useIREmit"></label>
-          <span>IR Emits (doesn't reflect)</span>
+          <span>Emisiones IR (no reflejan)</span>
         </div>
     </div>
       <div id="year-box">
-        Year: <span id="year"></span>
+        Año: <span id="year"></span>
       </div>
     </div>
     <div id="footer">
